--- a/views/help/component-card.hbs
+++ b/views/help/component-card.hbs
@@ -1,9 +1,9 @@
-<div class="help-card">
+<div class="help-card {{class}}">
     <div class="icon-wrapper">
-        <i class="fa fa-birthday-cake" aria-hidden="true"></i>
+        <i class="fa {{icon}}" aria-hidden="true"></i>
     </div>
     <div class="card-content">
-        <h5 class="card-title">{{title}}</h5>
+        <h4 class="card-title">{{title}}</h4>
         <div class="card-body">
             {{#block "card-body"}}{{/block}}
         </div>
