--- a/views/help/component-card.hbs
+++ b/views/help/component-card.hbs
@@ -1,4 +1,4 @@
-<div class="help-card {{class}}">
+<div class="help-card {{class}}" id="{{id}}">
     <div class="icon-wrapper">
         <i class="fa {{icon}}" aria-hidden="true"></i>
     </div>
