--- a/views/help/contact.hbs
+++ b/views/help/contact.hbs
@@ -1,10 +1,12 @@
 <div class="contact-form">
   <p>Wen möchtest du Kontaktieren?</p>
   <fieldset id="message_target" class="message-input">
-    <input type="radio" id="admin" name="message_target" value="admin" checked>
-    <label for="admin">Admin</label> 
-    <input type="radio" id="team" name="message_target" value="team">
-    <label for="team"> {{theme.short_title}}-Team</label>
+    <div class="switch">
+      <input type="radio" id="admin" name="message_target" value="admin" checked>
+      <label for="admin">Admin</label> 
+      <input type="radio" id="team" name="message_target" value="team">
+      <label for="team"> {{theme.short_title}}-Team</label>
+    </div>
   </fieldset>
 
   <div class="admin_form">
@@ -14,11 +16,13 @@
   <div class="team_form hidden">
     <p> Danke für dein Feedback, es wird direkt an das Entwicklungsteam der {{theme_short_title}} gesendet. Bitte achte darauf, keine passwörter und andere sensible Daten mitzusenden.</p>
     <p>Welche Art von Feedback möchtest du uns senden?</p>
-    <fieldset id="message_type" class="message-input">
-      <input type="radio" id="wish" name="message_type" value="wish" checked>
-      <label for="wish">Wunsch</label> 
-      <input type="radio" id="bug" name="message_type" value="bug">
-      <label for="bug">Problem</label>
+    <fieldset id="message_type">
+      <div class="switch">
+        <input type="radio" id="wish" name="message_type" value="wish" checked>
+        <label for="wish">Wunsch</label> 
+        <input type="radio" id="bug" name="message_type" value="bug">
+        <label for="bug">Problem</label>
+      </div>
     </fieldset>
     
     <div class="wish_form">
