finished contact form design

--- a/views/help/contact.hbs
+++ b/views/help/contact.hbs
@@ -1,6 +1,6 @@
 <div class="contact-form">
   <p>Wen möchtest du Kontaktieren?</p>
-  <fieldset id="message_target" class="message-input">
+  <fieldset id="message_target">
     <div class="switch">
       <input type="radio" id="admin" name="message_target" value="admin" checked>
       <label for="admin">Admin</label> 
