--- a/static/styles/help/component-card.scss
+++ b/static/styles/help/component-card.scss
@@ -2,6 +2,7 @@
     position: relative;
     margin-top: 3rem;
     margin-bottom: 1rem;
+    max-width: 500px;
 
     .icon-wrapper{
         display: inline-block;
