--- a/static/styles/help/help.scss
+++ b/static/styles/help/help.scss
@@ -63,3 +63,57 @@ iframe.full{
       }
   }
 }
+.first-steps-card {
+  .card-content {
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+
+    .card-body {
+      display: flex;
+
+      .link-wrapper {
+        display: inline-block;
+        width: 25%;
+        height: 6rem;
+        color: #fff;
+
+        &:nth-of-type(1) {
+          background-color: #b00c36;
+          border-bottom-left-radius: 4px;
+        }
+        &:nth-of-type(2) {
+          background-color: #e25617;
+        }
+        &:nth-of-type(3) {
+          background-color: #f89c0e;
+        }
+        &:nth-of-type(4) {
+          background-color: #0c53b0;
+          border-bottom-right-radius: 4px;
+        }
+        a {
+          color: #fff;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          text-decoration: none;
+          span{
+            transition: all .2s ease-in-out;
+          }
+
+          i {
+            display: block;
+            font-size: 1.8rem;
+          }
+          
+          &:hover span, &:focus span{
+            transform: scale(1.2);
+            text-shadow: 0px 2px 5px #333a;
+          }
+        }
+      }
+    }
+  }
+}
