removed buggy code

--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -28,7 +28,7 @@
                 <div class="form-group">
                     <label>Name des Kurses</label>
                     <input class="form-control" name="name" type="text" placeholder="Mathe 10a" value="{{course.name}}"
-                           required/>
+                           required autofocus/>
                 </div>
 
                 <div class="form-group">
