- format code of administration.js - change icons for better understandable user experience - adding new text and buttons

--- a/static/styles/administration/users.scss
+++ b/static/styles/administration/users.scss
@@ -2,12 +2,16 @@
 
 .consent-status{
     &.fa-check{
+        color: orange;
+    }
+    &.fa-check.double-check{
         color: green;
     }
-    &.fa-circle-thin{
-        color: orange;
-        font-weight: bold;
-    }
+    // Legacy
+    // &.fa-circle-thin{
+    //     color: orange;
+    //     font-weight: bold;
+    // }
     &.fa-times{
         color: red;
     }
