--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -24,9 +24,10 @@
                             <center>
                                 <i class="fa fa-times consent-status"></i>
                                 Keine Einverständniserklärung vorhanden &emsp;
-                                <i class="fa fa-circle-thin consent-status"></i>
-                                Eltern haben zugestimmt (oder Schüler ist über 18) &emsp;
                                 <i class="fa fa-check consent-status"></i>
+                                Eltern haben zugestimmt &emsp;
+                                <i class="fa fa-check double-check consent-status"></i>
+                                <i style="position: relative; left: -6px" class="fa fa-check double-check consent-status"></i>
                                 Alle Zustimmungen vorhanden
                             </center>
                         </div>
@@ -34,8 +35,28 @@
                     <div class="row">
                         {{> "lib/components/pagination" settings=pagination }}
                     </div>
+                    <div class="row mt-3 mb-3">
+                        <div class="col-sm-12 no-padding">
+                            <h4>
+                                Einverständniserklärung einholen
+                            </h4>
+                            <p>
+                                Lass deinen Schülern und deren Eltern individuelle Links zum Erklären des Einverständnisses digital oder analog zukommen. Bei Abschluss der Registrierung wird ein Loginpasswort für den Schüler erstellt.
+                            </p>
+                            <p>Für alle Schüler ohne vollständige Einverständniserklärung:</p>
+                            <button class="btn btn-secondary btn-send-links-emails">
+                                Links an Schüler E-Mail Adressen senden
+                            </button>
+                            <button class="btn btn-secondary btn-print-links">
+                                Link-Druckbogen erstellen
+                            </button>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-sm-12 no-padding">
+                            <h4>
+                                Aktionen
+                            </h4>
                             <button type="submit" class="btn btn-primary btn-add-modal">
                                 Schüler hinzufügen
                             </button>
