Email card ready

--- a/static/styles/help/help.scss
+++ b/static/styles/help/help.scss
@@ -142,3 +142,13 @@ iframe.full {
     }
   }
 }
+.eMail-card {
+
+  .card-content {
+    color: #fff;
+    background: #e25617;
+  }
+  #email-addresses {
+    padding: 1.6rem 0rem;
+  }
+}
