--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -104,5 +104,64 @@
             {{/content}}
         {{/embed}}
 
+        {{#embed "help/component-card" title="Wissenswertes" icon="fa-lightbulb-o" class="information-card"}}
+            {{#content "card-body"}}
+            <div class="card-row">
+               <div class="link-wrapper">
+                    <a href="#"
+                        target="_blank"
+                        title="FAQ">
+                        <span>
+                            <i class="fa fa-comments"></i>
+                            FAQ
+                        </span>   
+                    </a>
+                </div>
+                <div class="link-wrapper">
+                    <a href="#"
+                        target="_blank"
+                        title="SSO">
+                        <span>
+                            <i class="fa fa-sign-in"></i>
+                            SSO
+                        </span>   
+                    </a>
+                </div>
+                <div class="link-wrapper">
+                    <a href="#"
+                        target="_blank"
+                        title="Release Notes">
+                        <span>
+                            <i class="fa fa-clipboard"></i>
+                            Release Notes
+                        </span>   
+                    </a>
+                </div> 
+            </div>
+            <div class="card-row">
+                <div class="link-wrapper">
+                    <a href="#"
+                        target="_blank"
+                        title="Über das Projekt">
+                        <span>
+                            <i class="fa fa-info"></i>
+                            Über das Projekt
+                        </span>   
+                    </a>
+                </div> 
+                <div class="link-wrapper">
+                    <a href="#"
+                        target="_blank"
+                        title="Website">
+                        <span>
+                            <i class="fa fa-globe"></i>
+                            Website
+                        </span>   
+                    </a>
+                </div> 
+            </div>
+            {{/content}}
+        {{/embed}}
+
     {{/content}}
 {{/extend}}
