--- a/static/styles/help/help.scss
+++ b/static/styles/help/help.scss
@@ -152,7 +152,7 @@ iframe.full {
     padding: 1.6rem 0rem;
   }
 }
-.information-card {
+.information-card, .quickHelp-card {
   .card-row {
     display: flex;
     &:nth-of-type(1) {
