refactoring teams controller, replace courseId with teamId

--- a/views/topic/edit-topic.hbs
+++ b/views/topic/edit-topic.hbs
@@ -20,8 +20,10 @@
 
                 <input name="courseId" type="hidden" data-force-value="true" value="{{courseId}}" />
 
+                <input name="teamId" type="hidden" data-force-value="true" value="{{teamId}}" />
+
                 <input name="courseGroupId" type="hidden" data-force-value="true" value="{{courseGroupId}}" />
-                
+
                 <input name="position" type="hidden" data-force-value="true" value="{{lesson.position}}" />
 
                 <div class="form-group">
