fix overview link

--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -116,7 +116,7 @@
                         {{/each}}
                     </div>
                     <div style="margin-top: .5rem">
-                        <a href="/teams/{{../_id}}/events" class="btn btn-add btn-secondary">
+                        <a href="/calendar" class="btn btn-add btn-secondary">
                             Zur Termin-Übersicht
                         </a>
                         {{#inArray "CREATE_NEWS" permissions}}
