--- a/static/styles/help/component-card.scss
+++ b/static/styles/help/component-card.scss
@@ -18,7 +18,9 @@
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
         i{
-            font-size: 1.8em; 
+            font-size: 1.8em;
+            width: 1em;
+            height: 1em;
         }
     }
     .card-content {
@@ -27,6 +29,7 @@
         padding: 16px;
         padding-top: 2rem;
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        border: 1px solid $colorLightGrey;
         text-align: center;
 
         .card-title {
