--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -3,7 +3,8 @@
 
 @import "./tether/tether.min.css";
 @import "./bootstrap/scss/bootstrap-flex";
-@import "./fontawesome/font-awesome";
+$fa-font-path: "/fonts/fontawesome";
+@import "../../../node_modules/font-awesome/scss/font-awesome.scss";
 @import "./chosen/bootstrap-chosen";
 @import "./datetimepicker/jquery.datetimepicker.min.css";
 @import "./toggle/bootstrap-toogle.min.css";
