--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -6,10 +6,10 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script type="text/javascript" src="/vendor/firebasejs/3.9.0/firebase-app.js" defer></script>
-        <script type="text/javascript" src="/vendor/firebasejs/3.9.0/firebase-messaging.js" defer></script>
+        <script type="text/javascript" src="/vendor-optimized/firebasejs/3.9.0/firebase-app.js" defer></script>
+        <script type="text/javascript" src="/vendor-optimized/firebasejs/3.9.0/firebase-messaging.js" defer></script>
         <script src="/scripts/loggedin.js" type="text/javascript" defer></script>
-        <script type="text/javascript" src="/vendor/mathjax/MathJax.js?config=TeX-AMS_HTML" defer></script>
+        <script type="text/javascript" src="/vendor-optimized/mathjax/MathJax.js?config=TeX-AMS_HTML" defer></script>
         <script type="text/javascript" src="/vendor/introjs/intro.min.js" defer></script>
         <script type="text/javascript" src="/vendor/feathersjs/feathers.js" defer></script>
     {{/content}}
