--- a/views/help/component-card.hbs
+++ b/views/help/component-card.hbs
@@ -1,6 +1,6 @@
 <div class="help-card {{class}}" id="{{id}}">
     <div class="icon-wrapper">
-        <i class="fa {{icon}}" aria-hidden="true"></i>
+        <i class="fa fa-fw {{icon}}" aria-hidden="true"></i>
     </div>
     <div class="card-content">
         <h4 class="card-title">{{title}}</h4>
