--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -58,14 +58,15 @@
         {{/embed}}
 
         {{#each tutorials}}
-            {{#embed "help/component-card" title=this.title icon="fa-child" class="accordion"}}
+            {{#embed "help/component-card" title=this.title icon=this.icon class="accordion"}}
                 {{#content "card-body"}}
                     {{#each this.categories}}
                         {{#if this.articles}}
                             <div class="card">
                                 <div class="card-header" id="headingOne">
+                                    <i class="fa fa-chevron-right bullet-icon" aria-hidden="true"></i>
                                     <h5 class="mb-0">
-                                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#{{this.id}}" aria-expanded="true" aria-controls="collapseOne">
+                                        <button class="btn btn-link entries-btn" type="button" data-toggle="collapse" data-target="#{{this.id}}" aria-expanded="true" aria-controls="collapseOne">
                                             {{this.title}}
                                         </button>
                                     </h5>
@@ -83,17 +84,20 @@
                                 </div>
                             </div>
                         {{else}}
-                        <a href="/help/confluence/{{this.id}}">
-                            <div class="card">
-                                <div class="card-header" id="headingOne">
-                                    <h5 class="mb-0">
-                                        <button class="btn btn-link" type="button">
-                                            {{this.title}}
-                                        </button>
-                                    </h5>
+                        <div class="card">
+                            <a href="/help/confluence/{{this.id}}">
+                                <div class="card">
+                                    <div class="card-header" id="headingOne">
+                                        <i class="fa fa-chevron-right bullet-icon" aria-hidden="true"></i>
+                                        <h5 class="mb-0">
+                                            <button class="btn btn-link entries-btn" type="button">
+                                                {{this.title}}
+                                            </button>
+                                        </h5>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
+                        </div>
                         {{/if}}
                     {{/each}}
                 {{/content}}
