updated team page for BP + some necessary refactoring ;)

--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -1,8 +1,8 @@
 <section class="section-team">
-    <div id="teamLength" hidden>
+    <div id="teamLength" class="hidden">
         {{teamLength}}
     </div>
-    {{#each teams as |currentteam childKey|}}
+    {{#each teams as |currentteam index|}}
     <h4>{{name}}</h4>
     <div class="container">
         <div class="row">
