--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -3,8 +3,8 @@
 
 @import "./tether/tether.min.css";
 @import "./bootstrap/scss/bootstrap-flex";
-$fa-font-path: "/fonts/fontawesome";
-@import "../../../node_modules/font-awesome/scss/font-awesome.scss";
+$fa-font-path: "/vendor-optimized/font-awesome/fonts";
+@import "font-awesome/scss/font-awesome.scss";
 @import "./chosen/bootstrap-chosen";
 @import "./datetimepicker/jquery.datetimepicker.min.css";
 @import "./toggle/bootstrap-toogle.min.css";
@@ -26,7 +26,7 @@ $fa-font-path: "/fonts/fontawesome";
 		display: block;
 	}
 	h5 {
-		font-style: italic; 
+		font-style: italic;
 		margin: 30px 0px 20px 0px;
 		width: 100%;
 		display: block;
